functional back-end

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,8 +17,10 @@
   <section>
     
     <header>
-      <h2> Item Details Panel</h2>
       {{!-- navigational menu, including loop button will go here, to aid in site navigation --}}
+      <h2> Item Details Panel</h2>
+      <button name="loop_through_list" type="button" id="loopButton">Loop</button>
+
     </header>
 
     {{!-- Table for item information, will only show first item by default, looping is triggered by user button input --}}
