--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
   <section class="col side-panel">
 
     <header>
-      <h2 class="sec-heading"> Shopping List </h2>
+      <h2 class="sec-heading"> Grocery List </h2>
     </header>
 
     {{!-- Iterating through list object and creating list item and corresponding svg
@@ -23,42 +23,91 @@
   </section>
 
   <section class="col side-panel">
+    <div class="row">
+      <article>
+        <header class="flex-grid" id="details_panel">
+          {{!-- navigational menu will include edit button --}}
+          <h2 class="col sec-heading"> Item Details Panel</h2>
 
-      <header id="details_panel">
-        {{!-- navigational menu will include edit button --}}
-        <h2 class="sec-heading"> Item Details Panel</h2>
-        {{!-- edit button currently disabled --}}
-        {{!-- <button name="edit_active_item" type="button" id="editButton">Edit</button> --}}
-      </header>
-
+          <button type="button" class="itemEdit" id="editButton">Edit</button>
+        </header>
+  
     {{!-- Table will only show first item by default, changes on user input--}}
+        <table>
+          <caption>
+            <h3 class="sec-heading"> Grocery Item </h3>
+          </caption>
+          <tr>
+            <th>Category</th>
+            <td id="categoryTable">{{groceriesList.0.category}}</td>
+          </tr>
+          <tr>
+            <th>Item Name</th>
+            <td id="nameTable">{{groceriesList.0.item}}</td>
+          </tr>
+          <tr>
+            <th>Type</th>
+            <td id="typeTable">{{groceriesList.0.type}}</td>
+          </tr>
+          <tr>
+            <th>Brand</th>
+            <td id="brandTable">{{groceriesList.0.brand}}</td>
+          </tr>
+          <tr>
+            <th>Quantity</th>
+            <td id="qtyTable">{{groceriesList.0.qty}}</td> 
+          </tr>
+        </table>
 
-      <table>
-        <caption>
-          <h3 class="sec-heading"> Grocery Item </h3>
-        </caption>
-        <tr>
-          <th>Category</th>
-          <td class="categoryTable">{{groceriesList.0.category}}</td>
-        </tr>
-        <tr>
-          <th>Item Name</th>
-          <td class="nameTable">{{groceriesList.0.item}}</td>
-        </tr>
-        <tr>
-          <th>Type</th>
-          <td class="typeTable">{{groceriesList.0.type}}</td>
-        </tr>
-        <tr>
-          <th>Brand</th>
-          <td class="brandTable">{{groceriesList.0.brand}}</td>
-        </tr>
-        <tr>
-          <th>Quantity</th>
-          <td class="qtyTable">{{groceriesList.0.qty}}</td> 
-        </tr>
-      </table>
+      </article>
 
+    {{!-- Form, instead of conditional rendering ADA guidelines suggest forms always be accessible,
+    here regex and form attr are used for form validation, there is much to be desired for this
+    authentication scheme --}}
+
+      <form id="editUpdateForm">
+        <h3 class="sec-heading">Add/Edit Entry</h3>
+        
+          <div class="form-row">
+            <label for="category">Category:</label>
+            <select name="category" id="categoryInput"> required>
+              <option value="fruit">Fruit</option>
+              <option value="pasta">Pasta</option>
+              <option value="dessert">Dessert</option>
+              <option value="dairy">Dairy</option>
+              <option value="beverage">Beverage</option>
+            </select>
+          </div>
+
+          <div class="form-row">
+            <label for="item">Item Name:</label>
+            <input type="text" name="item" size="20" id="nameInput"
+            placeholder="Item Name" pattern="^[a-zA-Z0-9_]+( [a-zA-Z0-9_]+)*$" required/>
+          </div>
+        
+          <div class="form-row">
+            <label for="type">Type:</label>
+            <input type="text" name="type" size="20" id="typeInput"
+            placeholder="Type of Product" pattern="^[a-zA-Z0-9_]+( [a-zA-Z0-9_]+)*$" required/>
+          </div>
+
+          <div class="form-row">
+            <label for="type">Brand:</label>
+            <input type="text" name="brand" size="20" id="brandInput"
+            placeholder="Brand of Product" pattern="^[a-zA-Z0-9_]+( [a-zA-Z0-9_]+)*$" required/>
+          </div>
+
+          <div class="form-row">
+            <label for="qty">Quantity:</label>
+            <input type="text required" name="qty" id="qtyInput"
+            placeholder="Quantity (Numbers Only)" pattern="^\d{1,45}$"/>
+          </div>
+
+          <button type="submit" aria-labelledby="editUpdateForm">Submit</button>
+      
+      
+      </form>
+    </div>
   </section> 
 </div>
 
