--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,9 @@
           {{!-- navigational menu will include edit button --}}
           <h2 class="col sec-heading"> Item Details Panel</h2>
 
-          <button type="button" class="itemEdit" id="editButton">Edit</button>
+          <button type="button" class="itemEdit" id="editButton" aria-label="edit button">
+            <i class="fas fa-edit"></i> Edit
+          </button>
         </header>
   
     {{!-- Table will only show first item by default, changes on user input--}}
